<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/VariablesXs" />

            <EditText
                android:id="@+id/lagrangeXs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/VariablesYs" />

            <EditText
                android:id="@+id/lagrangeYs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFuncion"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/lagrangeF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/trapecia_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Entrada"
                android:text="@string/txtCalcular" />

            <TextView
                android:id="@+id/lagrangeresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Resultado"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
