<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_x"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/valorX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valorE"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ValorE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFuncion"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ValorFuncionnewton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/lagrangeresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtfuncionD"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/valorFuncionD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <Button
                android:id="@+id/trapecia_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="EntradaNewton"
                android:text="@string/txtCalcular" />

            <TextView
                android:id="@+id/txtresultNewton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:text="@string/Resultado"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
