<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtx0"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/ValorX0Falsaposicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" >
                
                  <requestFocus />
                  
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtx1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/ValorX1Falsaposicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" >

              
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valorE"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/ValorEFalsaposicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/lagrangeresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFuncion"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/ValorFuncionFalsaposicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:inputType="text"/>

            <Button
                android:id="@+id/trapecia_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtCalcular" 
                android:onClick="Entrada"/>

            <TextView
                android:id="@+id/txtResultFalsaposicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Resultado"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
