<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.42" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.07" >

            <TextView
                android:id="@+id/txtXa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/ValorXa"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ValorXa"
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtXa"
                android:ems="10"
                android:inputType="numberDecimal" >
                
                <requestFocus />
               </EditText>

            
            
            <TextView
                android:id="@+id/txtXb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/ValorXa"
                android:text="@string/txtXb"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <EditText
                android:id="@+id/valorXb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/ValorXa"
                android:layout_below="@+id/txtXb"
                android:ems="10"
                android:inputType="numberSigned" >

                
                
            </EditText>

            <TextView
                android:id="@+id/txtError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/valorXb"
                android:text="@string/valorE"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ValorError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtError"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/txtFunc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/ValorError"
                android:text="@string/txtFuncion"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ValorFuncion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtFunc"
                android:ems="10"
                android:inputType="text" />

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/ValorFuncion"
                android:onClick="Entrada"
                android:text="@string/txtCalcular" />

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/btnCalcular"
                android:text="@string/Resultado"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            

        </RelativeLayout>
    </ScrollView>

</TableLayout>