<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   A"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/simson1_3_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   B"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/simson1_3_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFuncion"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/simson1_3_funcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Entrad"
                android:text="@string/txtCalcular" />

            <TextView
                android:id="@+id/simson1_3_resp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Resultado"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
